# Shard-Renderer

./: .gitignore  CMakeLists.txt  build.bat  main.py  obj_parser.py  texture_loader.py  texture_slots.py
assets/shaders/: basic.frag  basic.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  standard.frag  standard.vert
materials/: __init__.py  pbr.py  skybox.py
shard_renderer/: __init__.py
src/: Engine.cpp  Engine.h  Main.cpp  Shader.cpp  Shader.h  Window.h
src/Bindings/: RendererBindings.cpp
src/Core/: Camera.h  Engine.cpp  Engine.h  Input.h
src/Gameplay/: PlayerController.h
src/Math/: Mat4.h  Vec3.h
src/Platform/Windows/: GPUHints.cpp  Linking.cpp
src/Rendering/: Material.h  Shader.cpp  Shader.h  ShadowMapper.cpp  ShadowMapper.h  Window.cpp
src/Testing/: PlayerController.h
